# api/urls.py
@@ -1,6 +1,8 @@
 from django.urls import path
-from .views import HelloView
+from .views import RegisterView, LoginView, MeView
 
 urlpatterns = [
-    path("hello/", HelloView.as_view(), name="hello"),
+    path('auth/register', RegisterView.as_view(), name='auth-register'),
+    path('auth/login', LoginView.as_view(), name='auth-login'),
+    path('auth/me', MeView.as_view(), name='auth-me'),
 ]
